basic subscription and refactoring implemented

--- a/EXAMPLE.env
+++ b/EXAMPLE.env
@@ -4,5 +4,8 @@ REACT_APP_OAUTH_CLIENT_SECRET_KEY=
 # alexa oauth credentials
 REACT_APP_OAUTH_ALEXA_CLIENT_KEY_ID=
 REACT_APP_OAUTH_ALEXA_CLIENT_SECRET_KEY=
+# PayPal oauth credentials
+REACT_APP_PAYPAL_CLIENT_KEY_ID=
+REACT_APP_PAYPAL_CLIENT_SECRET_KEY=
 # production api (backend)
 REACT_APP_BACKEND_API = 'http://<backend-production-api>/v1/'
